# slopo

./: .gitignore  Makefile  README.md  local-embed-server.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
doc/example-report/: cluster-01.md  cluster-02.md  cluster-03.md  cluster-04.md  cluster-05.md  cluster-06.md  cluster-07.md  cluster-08.md  cluster-09.md  cluster-10.md  index.md
src/slopo/: cli.py  config.py  db.py  progress.py  schema.py
src/slopo/analysis/: boost.py  clustering.py  command.py  db.py  dedup.py  ignore.py  models.py  overlap.py  report.py  rerank.py  similarity.py
src/slopo/analysis/report/: filesystem.py  markdown.py  naming.py
src/slopo/embedding/: batching.py  command.py  db.py  embeddings.py  models.py
src/slopo/indexing/: command.py  db.py  scanner.py  sync.py
src/slopo/indexing/parsing/: base.py  registry.py
src/slopo/indexing/parsing/lang/: csharp.py  elixir.py  go.py  java.py  javascript.py  kotlin.py  php.py  python.py  rust.py  typescript.py
tests/: conftest.py  test_config.py  test_db.py
tests/analysis/: test_boost.py  test_clustering.py  test_db.py  test_dedup.py  test_ignore.py  test_overlap.py  test_report.py  test_rerank.py  test_similarity.py
tests/analysis/report/: test_filesystem.py  test_markdown.py
tests/embedding/: test_batching.py  test_db.py  test_embeddings.py
tests/indexing/: test_db.py  test_scanner.py  test_sync.py
tests/indexing/parsing/: test_base.py
tests/indexing/parsing/lang/: test_csharp.py  test_elixir.py  test_go.py  test_java.py  test_javascript.py  test_kotlin.py  test_php.py  test_python.py  test_rust.py  test_typescript.py
tests/indexing/parsing/lang/fixtures/csharp/: BodySizes.cs  Comments.cs  Example.cs  Lambdas.cs  Nested.cs  NestedInBody.cs
tests/indexing/parsing/lang/fixtures/elixir/: BodySizes.ex  Closures.ex  Comments.ex  Example.ex  Nested.ex  NestedInBody.ex
tests/indexing/parsing/lang/fixtures/go/: BodySizes.go  Closures.go  Comments.go  Example.go  NestedInBody.go
tests/indexing/parsing/lang/fixtures/java/: BodySizes.java  Comments.java  Example.java  Lambdas.java  Nested.java  NestedInBody.java
tests/indexing/parsing/lang/fixtures/javascript/: BodySizes.js  Comments.js  Example.js  Nested.js
tests/indexing/parsing/lang/fixtures/kotlin/: BodySizes.kt  Comments.kt  (+4 more)
(+21 files in other folders)
