[project]
name = "slopo"
version = "0.1.0"
description = "Embedding-based code duplication detector"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Rafal Kochanowski" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm~=1.89.2",
    "numpy~=2.4.6",
    "pathspec~=1.1.1",
    "python-dotenv~=1.2.2",
    "pyyaml~=6.0.3",
    "tree-sitter~=0.25.2",
    "tree-sitter-c-sharp~=0.23.5",
    "tree-sitter-go~=0.25.0",
    "tree-sitter-java~=0.23.5",
    "tree-sitter-javascript~=0.25.0",
    "tree-sitter-kotlin~=1.1.0",
    "tree-sitter-python~=0.25.0",
    "tree-sitter-rust~=0.24.2",
    "tree-sitter-typescript~=0.23.2",
    "typer~=0.26.7",
]

[project.urls]
Homepage = "https://slopo.dev"
Repository = "https://github.com/rafal-qa/slopo"

[project.scripts]
slopo = "slopo.cli:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
extend-exclude = ["tests/indexing/parsing/lang/fixtures"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
